# web-component-rs

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs  macros.rs  objects_register.rs  prelude.rs  traits.rs
