[package]
name          = "web-component"
version       = "0.1.6-alpha.0"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
license       = "Apache-2.0"
description   = "A library for easily creating Web Components."
readme        = "README.md"
documentation = "https://docs.rs/web-component"
repository    = "https://github.com/notdanilo/web-component-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde                = { version = "1.0.104", features = [ "derive" ] }
serde_json           = "1.0.48"
erased-serde         = "0.3"
wasm-bindgen         = "0.2.58"
paste                = "0.1.8"
web-component-derive = { path = "crates/web-component-derive" }

[dependencies.web-sys]
version  = "0.3.35"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "ShadowRoot",
    "CssStyleDeclaration",
    "NamedNodeMap",
    "Attr",
    "console"
]
